[gd_scene load_steps=11 format=3 uid="uid://dyiey33mghc56"]

[ext_resource type="Script" path="res://scripts/characters/shopkeeper.gd" id="1_5km08"]
[ext_resource type="Texture2D" uid="uid://dcprk823ncdeb" path="res://assets/shopkeep/shop-keep.png" id="2_r4372"]
[ext_resource type="PackedScene" uid="uid://wlhxfjqrug51" path="res://scenes/characters/dialouge.tscn" id="3_l7jhp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kwpff"]
atlas = ExtResource("2_r4372")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edtaf"]
atlas = ExtResource("2_r4372")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6gea"]
atlas = ExtResource("2_r4372")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_niauu"]
atlas = ExtResource("2_r4372")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6eo2q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwpff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edtaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6gea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niauu")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brlff"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdcr6"]
size = Vector2(96, 72)

[node name="shopkeeper" type="CharacterBody2D"]
position = Vector2(272, 200)
scale = Vector2(0.9, 0.9)
script = ExtResource("1_5km08")

[node name="Icon" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 10.5)
scale = Vector2(1.625, 1.59375)
sprite_frames = SubResource("SpriteFrames_6eo2q")
autoplay = "default"
frame_progress = 0.429246

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 10.5)
shape = SubResource("RectangleShape2D_brlff")

[node name="shopkeeperArea" type="Area2D" parent="."]
position = Vector2(-22, -5.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="shopkeeperArea"]
position = Vector2(24, 28)
shape = SubResource("RectangleShape2D_bdcr6")

[node name="Dialouge" parent="." instance=ExtResource("3_l7jhp")]
offset_left = -120.0
offset_top = -104.0
offset_right = -120.0
offset_bottom = -104.0

[connection signal="body_entered" from="shopkeeperArea" to="." method="_on_shopkeeper_area_body_entered"]
[connection signal="body_exited" from="shopkeeperArea" to="." method="_on_shopkeeper_area_body_exited"]
[connection signal="dialouge_finished" from="Dialouge" to="." method="_on_dialouge_dialouge_finished"]
